--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prismicio/client": "^5.1.0",
     "@stripe/stripe-js": "^1.16.0",
     "axios": "^0.21.1",
     "faunadb": "^4.3.0",
     "next": "11.0.1",
     "next-auth": "^3.27.3",
+    "prismic-dom": "^2.2.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
@@ -24,6 +26,7 @@
     "@types/next-auth": "^3.15.0",
     "@types/node": "^16.3.3",
     "@types/react": "^17.0.14",
+    "@types/prismic-dom": "^2.1.1",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
     "typescript": "^4.3.5"
